force-app/main/default/objects/ssot__EmailEngagement__dlm/fields/ssot__DigitalContentComponentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalContentComponentId__c</fullName>
    <label>Digital Content Component Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalContentComponentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>