force-app/main/default/objects/ssot__EmailEngagement__dlm/fields/ssot__rel_1720024238840_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024238840_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmailEngagement_EngagementActionId_m_rel</label>
    <referenceTo>ssot__EngagementAction__dlm</referenceTo>
    <relationshipLabel>EmailEngagement_EngagementActionId_m_rel</relationshipLabel>
    <relationshipName>rel_1720024238840_end</relationshipName>
    <type>Lookup</type>
</CustomField>