force-app/main/default/objects/ssot__EmailEngagement__dlm/fields/ssot__rel_1729794839193_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729794839193_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmailEngagement_PersonalizationConte_rel</label>
    <referenceTo>ssot__PersonalizationLog__dlm</referenceTo>
    <relationshipLabel>EmailEngagement_PersonalizationConte_rel</relationshipLabel>
    <relationshipName>rel_1729794839193_end</relationshipName>
    <type>Lookup</type>
</CustomField>